--- a/public/locales/en-US/main.json
+++ b/public/locales/en-US/main.json
@@ -9,8 +9,8 @@
   "clearConversation": "Clear Conversation History",
   "import": "Import",
   "export": "Export",
-  "author": "Made by Jing Hua",
-  "about": "About & Sponsor",
+  "author": "",
+  "about": "",
   "api": "API",
   "personal": "Personal",
   "free": "Free",
